Minor defect fix, overflow on 1:2 card

--- a/less/components/consonant/cards/one-half.less
+++ b/less/components/consonant/cards/one-half.less
@@ -206,6 +206,12 @@
                 }
             }
 
+            &-label + &-title + &-text {
+                max-height: 1.3125rem * 2;
+
+                .line-clamp(2);
+            }
+
             &-badge {
                 display: block;
                 position: absolute;
